2008-12-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/clock.tcl (ProcessPosixTimeZone): Fallback to
	European time zone DST rules, when the timezone is
	between 0 and -12 [Bug 2207436].
	* tests/clock.test (clock-64.[12]): Test cases for [Bug 2207436]
	
2008-12-10  Kevin B. Kenny  <kennykb@acm.org>

	* library/tzdata/*: Update from Olson's tzdata2008i.
	
2008-12-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c (Tcl_FSGetNormalizedPath):        Added another
	flag value TCLPATH_NEEDNORM to mark those intreps which need more
	complete normalization attention for correct results.  [Bug 2385549]

2008-12-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclFileName.c (DoGlob):    One of the
	Tcl_FSMatchInDirectory() calls did not have its return code checked.
	This caused error messages returned by some Tcl_Filesystem drivers
	to be swallowed.

2008-12-02  Andreas Kupries   <andreask@activestate.com>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Replaced Alexandre
	Ferrieux's first patch for [Bug 2270477] with a gentler version,
	also supplied by him.

2008-12-01  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclParse.c:	Backport fix for [Bug 2251175].

2008-11-30  Kevin B. Kenny  <kennykb@acm.org>

	* library/clock.tcl (format, ParseClockScanFormat): Added a
	[string map] to get rid of namespace delimiters before caching a
	scan or format procedure [Bug 2362156].
	* tests/clock.test (clock-64.[12]): Added test cases for the bug
	that was tickled by a namespace delimiter inside a format string.
	
	
2008-11-25  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (TclFinalizeIOSubsystem): Applied Alexandre
	  Ferrieux's patch for [Bug 2270477] to prevent infinite looping
	  during finalization of channels not bound to interpreters.

2008-08-23  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c: Backport of fix for [Bug 2333466].

2008-11-18  Jan Nijtmans  <nijtmans@users.sf.net>
